--- a/ExpenseRecord/Properties/launchSettings.json
+++ b/ExpenseRecord/Properties/launchSettings.json
@@ -10,11 +10,12 @@
   "profiles": {
     "ExpenseRecord": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7081;http://localhost:5078",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7127;http://localhost:5296",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
