--- a/ExpenseRecord/Properties/launchSettings.json
+++ b/ExpenseRecord/Properties/launchSettings.json
@@ -10,12 +10,11 @@
   "profiles": {
     "ExpenseRecord": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7127;http://localhost:5296",
+      "applicationUrl": "https://localhost:7081;http://localhost:5078",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       }
     },
     "IIS Express": {
