--- a/ExpenseRecord/appsettings.json
+++ b/ExpenseRecord/appsettings.json
@@ -1,10 +1,15 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "RecordDatabase": {
+    "ConnectionString": "mongodb://localhost:27017/",
+    "DatabaseName": "Records",
+    "CollectionName": "Records_shuang19"
+  }
 }
