--- a/ExpenseRecord/Properties/launchSettings.json
+++ b/ExpenseRecord/Properties/launchSettings.json
@@ -11,7 +11,8 @@
     "ExpenseRecord": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7081;http://localhost:5078",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7095;http://localhost:5028",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
@@ -20,6 +21,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
